    setattr/delattr used on a hybrid that doesn't 
    define fset or fdel. [ticket:2353]

  - [bug] Fixed bug where unpickled object didn't 
    have enough of its state set up to work
    correctly within the unpickle() event established
    by the mutable object extension, if the object
    needed ORM attribute access within 
    __eq__() or similar. [ticket:2362]

- sql
  - [feature] Added "false()" and "true()" expression
    constructs to sqlalchemy.sql namespace, though
    not part of __all__ as of yet.

  - [bug] Fixed issue where the "required" exception
    would not be raised for bindparam() with required=True,
    if the statement were given no parameters at all.
    [ticket:2381]

- engine
  - [bug] Added __reduce__ to StatementError, 
    DBAPIError, column errors so that exceptions 
    are pickleable, as when using multiprocessing.  
    However, not 
    all DBAPIs support this yet, such as 
    psycopg2. [ticket:2371]

  - [bug] Improved error messages when a non-string
    or invalid string is passed to any of the
    date/time processors used by SQLite, including
    C and Python versions.  [ticket:2382]

  - [bug] Fixed bug whereby a table-bound Column 
    object named "<a>_<b>" which matched a column 
    labeled as "<tablename>_<colname>" could match 
    inappropriately when targeting in a result
    set row.  [ticket:2377]

  - [bug] Fixed bug in "mock" strategy whereby
    correct DDL visit method wasn't called, resulting
    in "CREATE/DROP SEQUENCE" statements being 
    duplicated [ticket:2384]

- sqlite
  - [bug] the "name" of an FK constraint in SQLite
    is reflected as "None", not "0" or other 
    integer value [ticket:2364].
    SQLite does not appear to support constraint
    naming in any case.

  - [bug] sql.false() and sql.true() compile to
    0 and 1, respectively in sqlite [ticket:2368]

- mysql
  - [bug] fixed regexp that filters out warnings
    for non-reflected "PARTITION" directives,